# dslpy

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.md
src/dsl/: __init__.py  data_utils.py  dsl.py  estimators.py  helpers.py  logit.py
tests/: test_data_utils.py  test_dsl.py  test_estimators.py  test_helpers.py  test_logit.py  test_package.py
